<resources>
    <string name="app_name">Recipes</string>
    <string name="detail_button">Pokaż przepis</string>
    <string name="recipie_name">Nazwa przepisu</string>
    <string name="recipie_content">Zawartość przepisu</string>
    <string name="recipie_ingredients">Ingredients:</string>
    <string name="recipie_servings">Servings:</string>
    <string name="recipie_instructions">Instructions:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="timer_default">00:00:00</string>
    <string name="set_countdown_time">Set countdown time</string>
    <string name="add_timer_button">Add timer</string>
    <string name="action_title">Recipes App</string>
    <string name="title_top">Fragment główny</string>
    <string-array name="kategoria1">
        <item>Pozycja 1 Kat. 1</item>
        <item>Pozycja 2 Kat. 1 </item>
        <item>Pozycja 3 Kat. 1 </item>
    </string-array>
    <string-array name="kategoria2">
        <item>Kat. 2 Pozycja 1</item>
        <item>Kat. 2 Pozycja 2</item>
        <item>Kat. 2 Pozycja 3 </item>
    </string-array>
    <string name="home_tab">Start</string>
    <string name="kat1_tab">Cocktails</string>
    <string name="kat2_tab">Cakes</string>
    <string name="card_image">Img</string>
    <string name="image_desc">Image</string>
    <string name="send_to_different_app">Send</string>
    <string name="title_on_title_screen">Welcome to Recipe App!</string>
    <string name="description_on_title_screen">It\'s the best place to look for great recipes for cocktails and cakes. Enjoy!</string>
    <string name="app_icon_image_description">App icon image</string>

</resources>