<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/app_icon"
            android:contentDescription="@string/app_icon_image_description" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:text="@string/title_on_title_screen"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTextView"
            android:padding="16dp"
            android:text="@string/description_on_title_screen"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:textSize="16sp" />

    </RelativeLayout>

</ScrollView>
